Switch dark mode button from absolute to fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .toggleDark {
-  position: absolute !important;
+  position: fixed !important;
   left: 2%;
   bottom: 2%;
 }
